--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Setting/UserSettings.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Setting/UserSettings.razor
@@ -47,7 +47,7 @@
                     <CardBody>
                         <Row>
                             <Column ColumnSize="ColumnSize.Is12">
-                                <PLAlert includeSnackBar="true" @ref="plAlert" />
+                                <PLAlert includeSnackBar="true" includeAlert="true" @ref="plAlert" />
                             </Column>
                         </Row>
                         <Row>
