--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Header/Header.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Header/Header.razor
@@ -13,7 +13,7 @@
         </BarStart>
         <BarEnd>
             <BarItem>
-                <TextEdit Placeholder="Some text value..." />               
+                <TextEdit Placeholder="Ask PanacheBot..." />               
             </BarItem>    
         </BarEnd>
     </BarMenu>
