--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAuthorized.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAuthorized.razor
@@ -58,7 +58,7 @@
     private async void LanguageCodeChanged()
     {
         await GetLanguageList();
-        StateHasChanged();
+        //StateHasChanged();
     }
 
     private async Task GetLanguageList()
