--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Client.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Client.razor
@@ -174,7 +174,7 @@
                     <CardBody>
                         <Row>
                             <Column ColumnSize="ColumnSize.Is12">
-                                <PLAlert includeSnackBar="true" @ref="plAlert" />
+                                <PLAlert includeSnackBar="true" includeAlert="true" @ref="plAlert" />
                             </Column>
                         </Row>
                         <Row>
