--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupEdit/CustomFieldGroupValueEdit.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupEdit/CustomFieldGroupValueEdit.razor
@@ -29,20 +29,20 @@
                                 @switch (customFieldHeaderRowField.customFieldHeader.CustomFieldType)
                                 {
                                     case CustomFieldTypes.DateTimeField:
-                                        <DateEdit TValue="DateTime" @bind-Date="@customFieldHeaderRowField.customFieldValue.DateTimeValue" InputMode="DateInputMode.Date"></DateEdit>
+                                        <DateEdit TValue="DateTime" @bind-Date="@customFieldHeaderRowField.customFieldValue.DateTimeValue" InputMode="DateInputMode.Date" ReadOnly="@ReadOnly"></DateEdit>
                                         break;
                                     case CustomFieldTypes.IntField:
-                                        <NumericEdit @bind-Value="@customFieldHeaderRowField.customFieldValue.IntValue"></NumericEdit>
+                                        <NumericEdit @bind-Value="@customFieldHeaderRowField.customFieldValue.IntValue" ReadOnly="@ReadOnly"></NumericEdit>
                                         break;
                                     case CustomFieldTypes.DoubleField:
-                                        <NumericEdit @bind-Value="@customFieldHeaderRowField.customFieldValue.DoubleValue"></NumericEdit>
+                                        <NumericEdit @bind-Value="@customFieldHeaderRowField.customFieldValue.DoubleValue" ReadOnly="@ReadOnly"></NumericEdit>
                                         break;
                                     case CustomFieldTypes.BoolField:
-                                        <Check TValue="bool" @bind-Checked="@customFieldHeaderRowField.customFieldValue.BoolValue">@customFieldHeaderRowField.customFieldHeader.Name</Check>
+                                        <Check TValue="bool" @bind-Checked="@customFieldHeaderRowField.customFieldValue.BoolValue" ReadOnly="@ReadOnly">@customFieldHeaderRowField.customFieldHeader.Name</Check>
                                         break;
                                     case CustomFieldTypes.StringField:
                                     default:
-                                        <TextEdit @bind-Text="@customFieldHeaderRowField.customFieldValue.StringValue"></TextEdit>
+                                        <TextEdit @bind-Text="@customFieldHeaderRowField.customFieldValue.StringValue" ReadOnly="@ReadOnly"></TextEdit>
                                         break;
                                 }
                             </Field>
@@ -51,16 +51,19 @@
                 </Row>
             }
 
-            <Row>
-                <Column ColumnSize="ColumnSize.Is12">
-                    <PLAlert includeSnackBar="true" @ref="plAlert" />
-                </Column>
-            </Row>
-            <Row>
-                <Column ColumnSize="ColumnSize.Is12">
-                    <Button Type="ButtonType.Submit" Color="Color.Primary" PreventDefaultOnSubmit="true" Clicked="@SaveFieldGroupValues" Loading="@SavingFieldGroup">@LanguageHelper.GetTitle(langQueryList, 10229)</Button>
-                </Column>
-            </Row>
+            @if (!ReadOnly)
+            {
+                <Row>
+                    <Column ColumnSize="ColumnSize.Is12">
+                        <PLAlert includeSnackBar="true" includeAlert="false" @ref="plAlert" />
+                    </Column>
+                </Row>
+                <Row>
+                    <Column ColumnSize="ColumnSize.Is12">
+                        <Button Type="ButtonType.Submit" Color="Color.Primary" PreventDefaultOnSubmit="true" Clicked="@SaveFieldGroupValues" Loading="@SavingFieldGroup">@LanguageHelper.GetTitle(langQueryList, 10229)</Button>
+                    </Column>
+                </Row>
+            }
         </CardBody>
     </Card>
 }
@@ -72,6 +75,9 @@
 
     [Parameter]
     public CustomFieldGroupValuesModel customFieldGroupValuesModel { get; set; }
+
+    [Parameter]
+    public bool ReadOnly { get; set; }
 
     bool SavingFieldGroup = false;
     PLAlert plAlert { get; set; }
