--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileUpload.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileUpload.razor
@@ -86,7 +86,7 @@
         </Row>
         <Row>
             <Column ColumnSize="ColumnSize.Is12">
-                <PLAlert includeSnackBar="true" @ref="plAlert" />
+                <PLAlert includeSnackBar="true" includeAlert="true" @ref="plAlert" />
             </Column>
         </Row>
     </CardBody>
