--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskGroupEdit.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskGroupEdit.razor
@@ -108,7 +108,7 @@
             <ModalFooter>
                 <Row>
                     <Column ColumnSize="ColumnSize.Is12">
-                        <PLAlert includeSnackBar="true" @ref="plAlert" />
+                        <PLAlert includeSnackBar="true" includeAlert="true" @ref="plAlert" />
                     </Column>
                 </Row>
                 <Row>
